add docs and csv request
