# internal/listener/router.go
@@ -25,4 +25,5 @@ func (l *service) setupRouter() {
 	l.router.Get("/healthcheck", handlers.GetHealthcheck)
 	l.router.Post("/ownership/add", handlers.PostOwnership)
 	l.router.Get("/ownership/cars", handlers.GetCars)
+	l.router.Get("/ownership/cars/csv", handlers.GetCarsCsv)
 }
